--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-joyride": "^2.5.3",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
