--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-joyride": "^2.5.3",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
+    "styled-components": "^6.1.8",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
